Add soft delete for warehouse