@@ -27,6 +27,7 @@ import org.springframework.util.StringUtils;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -41,8 +42,7 @@ public class WarehouseServiceImpl implements WarehouseService {
 
     @Override
     public WarehouseResponseDto createWarehouse(Long partnerId, WarehouseRequestDto dto) {
-        Partner partner = partnerRepository.findById(partnerId)
-                .orElseThrow(() -> new ResourceNotFoundException("Partner", "id", partnerId));
+        Partner partner = getValidPartner(partnerId);
         Warehouse warehouse = warehouseMapper.toWarehouse(dto);
         warehouse.setPartner(partner);
         warehouse.setWarehouseCode(CodeGenerator.generateCode(EntityType.PARTNER));
@@ -64,13 +64,9 @@ public class WarehouseServiceImpl implements WarehouseService {
 
     @Override
     public WarehouseResponseDto updateWarehouse(Long partnerId, Long warehouseId, WarehouseRequestDto dto) {
-        partnerRepository.findById(partnerId)
-                .orElseThrow(() -> new ResourceNotFoundException("Partner", "id", partnerId));
-        Warehouse existing = warehouseRepository.findById(warehouseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Warehouse", "id", warehouseId));
-        if (!existing.getPartner().getId().equals(partnerId)) {
-            throw new ResourceNotBelongToException("Warehouse", "id", warehouseId, "partner", "id", partnerId);
-        }
+        getValidPartner(partnerId);
+
+        Warehouse existing = getValidWarehouse(partnerId, warehouseId, false);
         warehouseMapper.updateWarehouseFromDto(dto, existing);
         Warehouse updated = warehouseRepository.save(existing);
 
@@ -90,34 +86,50 @@ public class WarehouseServiceImpl implements WarehouseService {
 
     @Override
     public WarehouseResponseDto getWarehouse(Long partnerId, Long warehouseId) {
-        partnerRepository.findById(partnerId)
-                .orElseThrow(() -> new ResourceNotFoundException("Partner", "id", partnerId));
-        Warehouse warehouse = warehouseRepository.findById(warehouseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Warehouse", "id", warehouseId));
-        if (!warehouse.getPartner().getId().equals(partnerId)) {
-            throw new ResourceNotBelongToException("Warehouse", "id", warehouseId, "partner", "id", partnerId);
-        }
+        getValidPartner(partnerId);
+
+        Warehouse warehouse = getValidWarehouse(partnerId, warehouseId, false);
         return warehouseMapper.toWarehouseResponseDto(warehouse);
     }
 
     @Override
     public void deleteWarehouse(Long partnerId, Long warehouseId) {
-        partnerRepository.findById(partnerId)
-                .orElseThrow(() -> new ResourceNotFoundException("Partner", "id", partnerId));
-        Warehouse warehouse = warehouseRepository.findById(warehouseId)
-                .orElseThrow(() -> new ResourceNotFoundException("Warehouse", "id", warehouseId));
-        if (!warehouse.getPartner().getId().equals(partnerId)) {
-            throw new ResourceNotBelongToException("Warehouse", "id", warehouseId, "partner", "id", partnerId);
-        }
+        getValidPartner(partnerId);
+
+        Warehouse warehouse = getValidWarehouse(partnerId, warehouseId, true);
+
         warehouseSearchRepository.deleteById(warehouse.getId()); // luu vao Elastic Search
 
         warehouseRepository.delete(warehouse);
     }
 
     @Override
-    public PagingResponse<WarehouseResponseDto> getAllWarehousesByPartnerId(int pageNo, int pageSize, String sortBy, String sortDir, Long partnerId, String searchKeyword) {
-        partnerRepository.findById(partnerId)
-                .orElseThrow(() -> new ResourceNotFoundException("Partner", "id", partnerId));
+    public void softDeleteWarehouse(Long partnerId, Long warehouseId) {
+        getValidPartner(partnerId);
+        Warehouse warehouse = getValidWarehouse(partnerId, warehouseId, false); // Get non-deleted
+
+        warehouse.setDeleted(true);
+        warehouseRepository.save(warehouse);
+        saveToElasticsearch(warehouse);
+        log.info("Warehouse with ID {} soft-deleted.", warehouseId);
+    }
+
+    @Override
+    public WarehouseResponseDto restoreWarehouse(Long partnerId, Long warehouseId) {
+        getValidPartner(partnerId);
+        Warehouse warehouse = getValidWarehouse(partnerId, warehouseId, true); // Get deleted
+
+        warehouse.setDeleted(false);
+        Warehouse restored = warehouseRepository.save(warehouse);
+        saveToElasticsearch(restored);
+        log.info("Warehouse with ID {} restored.", warehouseId);
+
+        return warehouseMapper.toWarehouseResponseDto(restored);
+    }
+
+    @Override
+    public PagingResponse<WarehouseResponseDto> getAllWarehousesByPartnerId(int pageNo, int pageSize, String sortBy, String sortDir, Long partnerId, String searchKeyword, boolean deleted) {
+        getValidPartner(partnerId);
 
         String effectiveSortBy = sortBy;
         if ("warehouseCode".equalsIgnoreCase(sortBy)) {
@@ -126,36 +138,28 @@ public class WarehouseServiceImpl implements WarehouseService {
             effectiveSortBy = "warehouseName.keyword";
         }
 
-        // Tao sort
         Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())
                 ? Sort.by(effectiveSortBy).ascending()
                 : Sort.by(effectiveSortBy).descending();
 
-        // Tao 1 pageable instance
         Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
-
-        // Tao 1 mang cac trang product su dung find all voi tham so la pageable
         Page<WarehouseDocument> pages;
 
         try {
             if (StringUtils.hasText(searchKeyword)) {
-                pages = warehouseSearchRepository.searchByKeyword(searchKeyword, pageable);
+                pages = warehouseSearchRepository.searchByKeywordAndPartnerId(searchKeyword, deleted, partnerId, pageable);
             } else {
-                pages = warehouseSearchRepository.getAllByPartnerId(partnerId, pageable);
+                pages = warehouseSearchRepository.getAllByPartnerIdAndDeleted(partnerId, deleted, pageable);
             }
         } catch (Exception ex) {
-            log.error("Exception: {}", ex.getMessage());
+            log.error("Elasticsearch query failed for warehouses (Partner ID: {}): {}", partnerId, ex.getMessage(), ex);
             pages = Page.empty(pageable);
         }
 
-        // Lay ra gia tri (content) cua page
-        List<WarehouseDocument> warehouses = pages.getContent();
+        List<WarehouseResponseDto> content = pages.getContent().stream()
+                .map(warehouseMapper::toResponseDtoFromDocument)
+                .collect(Collectors.toList());
 
-        // Ep kieu sang dto
-        List<WarehouseResponseDto> content = warehouses.stream()
-                .map(warehouseMapper::toResponseDtoFromDocument).toList();
-
-        // Gan gia tri (content) cua page vao ProductResponse de tra ve
         PagingResponse<WarehouseResponseDto> response = new PagingResponse<>();
         response.setContent(content);
         response.setTotalElements(pages.getTotalElements());
@@ -169,15 +173,50 @@ public class WarehouseServiceImpl implements WarehouseService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<String> suggestWarehouses(String prefix, int size) {
+    public List<String> suggestWarehouses(String prefix, int size, boolean deleted, Long partnerId) {
+        getValidPartner(partnerId);
         if (!StringUtils.hasText(prefix)) {
             return Collections.emptyList();
         }
-        // Gọi thẳng repository, nó sẽ tìm prefix trên sub‐field _index_prefix
-        var page = warehouseSearchRepository.findBySuggestionPrefix(prefix, PageRequest.of(0, size));
+        Pageable pageable = PageRequest.of(0, size);
+        Page<WarehouseDocument> page = warehouseSearchRepository.findBySuggestionPrefix(prefix, deleted, partnerId, pageable);
         return page.getContent().stream()
                 .map(WarehouseDocument::getWarehouseName)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    private Partner getValidPartner(Long partnerId) {
+        return partnerRepository.findByIdAndDeletedFalse(partnerId)
+                .orElseThrow(() -> new ResourceNotFoundException("Partner", "id", partnerId + " (or it might be deleted)"));
+    }
+
+    private Warehouse getValidWarehouse(Long partnerId, Long warehouseId, boolean expectDeleted) {
+        Warehouse warehouse = warehouseRepository.findById(warehouseId) // Fetch any first
+                .orElseThrow(() -> new ResourceNotFoundException("Warehouse", "id", warehouseId));
+
+        if (!warehouse.getPartner().getId().equals(partnerId)) {
+            throw new ResourceNotBelongToException("Warehouse", "id", warehouseId, "partner", "id", partnerId);
+        }
+
+        if (warehouse.getDeleted() != expectDeleted) {
+            throw new ResourceNotFoundException("Warehouse", "id", warehouseId +
+                    (expectDeleted ? " (is not deleted)" : " (is deleted)"));
+        }
+        return warehouse;
+    }
+
+    private void saveToElasticsearch(Warehouse warehouse) {
+        try {
+            WarehouseDocument doc = warehouseMapper.toDocument(warehouse);
+            String suggestion = (warehouse.getWarehouseCode() != null ? warehouse.getWarehouseCode() : "") + " "
+                    + (warehouse.getWarehouseName() != null ? warehouse.getWarehouseName() : "");
+            doc.setSuggestion(suggestion.trim());
+            doc.setDeleted(warehouse.getDeleted()); // Ensure deleted status is set
+            warehouseSearchRepository.save(doc);
+            log.info("Warehouse with ID {} saved to Elasticsearch.", warehouse.getId());
+        } catch (Exception e) {
+            log.error("Error saving warehouse with ID {} to Elasticsearch: {}", warehouse.getId(), e.getMessage(), e);
+        }
     }
 }
